# mlkem-bench

./: .gitignore  CMakeLists.txt  LICENSE  README.md  arm-none-eabi.cmake  steps.txt  stm32f4.ld
.github/workflows/: compile.yml
Inc/: acvp_vectors.h  randombytes.h
Src/: acvp_vectors.c  keccakf1600.S  main.c  main_test.c  randombytes.c  sha2.c
build_hardware/: CMakeCache.txt  Makefile  cmake_install.cmake  mlkem_stm32.elf  mlkem_stm32.hex
